# Pana autoconf file
AC_PREREQ([2.66])
AC_INIT([Pana], [1.5], [pana@bunnies.net])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_CPP
AC_PROG_MKDIR_P

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lGL':
AC_CHECK_LIB([GL], [main])
# FIXME: Replace `main' with a function in `-lICE':
AC_CHECK_LIB([ICE], [main])
# FIXME: Replace `main' with a function in `-lSDL':
AC_CHECK_LIB([SDL], [main])
# FIXME: Replace `main' with a function in `-lSM':
AC_CHECK_LIB([SM], [main])
# FIXME: Replace `main' with a function in `-lX11':
AC_CHECK_LIB([X11], [main])
# FIXME: Replace `main' with a function in `-lXext':
AC_CHECK_LIB([Xext], [main])
# FIXME: Replace `main' with a function in `-lartskde':
AC_CHECK_LIB([artskde], [main])
# FIXME: Replace `main' with a function in `-lcrypt':
AC_CHECK_LIB([crypt], [main])
# FIXME: Replace `main' with a function in `-lcrypto':
AC_CHECK_LIB([crypto], [main])
# FIXME: Replace `main' with a function in `-ldl':
AC_CHECK_LIB([dl], [main])
# FIXME: Replace `main' with a function in `-ljpeg':
AC_CHECK_LIB([jpeg], [main])
# FIXME: Replace `main' with a function in `-lkab':
AC_CHECK_LIB([kab], [main])
# FIXME: Replace `main' with a function in `-lkabc':
AC_CHECK_LIB([kabc], [main])
# FIXME: Replace `main' with a function in `-lkdecore':
AC_CHECK_LIB([kdecore], [main])
# FIXME: Replace `main' with a function in `-lkdemm':
AC_CHECK_LIB([kdemm], [main])
# FIXME: Replace `main' with a function in `-lkdepim':
AC_CHECK_LIB([kdepim], [main])
# FIXME: Replace `main' with a function in `-lkdeprint':
AC_CHECK_LIB([kdeprint], [main])
# FIXME: Replace `main' with a function in `-lkdeui':
AC_CHECK_LIB([kdeui], [main])
# FIXME: Replace `main' with a function in `-lkdnssd':
AC_CHECK_LIB([kdnssd], [main])
# FIXME: Replace `main' with a function in `-lkhtml':
AC_CHECK_LIB([khtml], [main])
# FIXME: Replace `main' with a function in `-lkimproxy':
AC_CHECK_LIB([kimproxy], [main])
# FIXME: Replace `main' with a function in `-lkio':
AC_CHECK_LIB([kio], [main])
# FIXME: Replace `main' with a function in `-lkjs':
AC_CHECK_LIB([kjs], [main])
# FIXME: Replace `main' with a function in `-lknewstuff':
AC_CHECK_LIB([knewstuff], [main])
# FIXME: Replace `main' with a function in `-lkparts':
AC_CHECK_LIB([kparts], [main])
# FIXME: Replace `main' with a function in `-lkspell':
AC_CHECK_LIB([kspell], [main])
# FIXME: Replace `main' with a function in `-lkunittest':
AC_CHECK_LIB([kunittest], [main])
# FIXME: Replace `main' with a function in `-lkutils':
AC_CHECK_LIB([kutils], [main])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-lmp4v2':
AC_CHECK_LIB([mp4v2], [main])
# FIXME: Replace `main' with a function in `-lmtp':
AC_CHECK_LIB([mtp], [main])
# FIXME: Replace `main' with a function in `-lmysqlclient':
AC_CHECK_LIB([mysqlclient], [main])
# FIXME: Replace `main' with a function in `-lnsl':
AC_CHECK_LIB([nsl], [main])
# FIXME: Replace `main' with a function in `-lpng':
AC_CHECK_LIB([png], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])
# FIXME: Replace `main' with a function in `-lresolv':
AC_CHECK_LIB([resolv], [main])
# FIXME: Replace `main' with a function in `-lruby':
AC_CHECK_LIB([ruby], [main])
# FIXME: Replace `main' with a function in `-lsmb':
AC_CHECK_LIB([smb], [main])
# FIXME: Replace `main' with a function in `-lssl':
AC_CHECK_LIB([ssl], [main])
# FIXME: Replace `main' with a function in `-ltag':
AC_CHECK_LIB([tag], [main])
# FIXME: Replace `main' with a function in `-ltunepimp':
AC_CHECK_LIB([tunepimp], [main])
# FIXME: Replace `main' with a function in `-lusb':
AC_CHECK_LIB([usb], [main])
# FIXME: Replace `main' with a function in `-lutil':
AC_CHECK_LIB([util], [main])
# FIXME: Replace `main' with a function in `-lxine':
AC_CHECK_LIB([xine], [main])
# FIXME: Replace `main' with a function in `-lz':
AC_CHECK_LIB([z], [main])

# Checks for header files.
AC_PATH_X
AC_CHECK_HEADERS([fcntl.h limits.h memory.h netinet/in.h stddef.h stdint.h stdlib.h string.h strings.h sys/ioctl.h sys/mount.h sys/param.h sys/socket.h sys/statvfs.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_C_RESTRICT
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_CHECK_FUNCS([alarm atexit dup2 fdatasync floor ftruncate getcwd gethostname gettimeofday localtime_r memmove memset mkdir munmap pow putenv realpath rint rmdir select setenv socket sqrt strcasecmp strchr strdup strerror strncasecmp strrchr strstr strtol])
AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
